           -- parse errors (if any) after it returns
      -- see examples for proper use - almost every example uses the parser
      -- these changes significantly reduce the clutter associated with the factory functions

--------------------------------------------------------------------------------
base library

   -- previously named the 'basic' library

   -- removed legacy support for factory names "BroadcastHandler", "MulticastHandler",
      and "UdpHandler" - instead use more explicit "UdpBroadcastHandler", "UdpMulticastHandler"
      and "UdpUnicastHandler" factor names.

   -- separated MonitorMetrics class definition and implementation away from Cie.h/cpp file.

   -- broke out everything defined by 'support.h/cpp' into groups and placed functionality
      into files located in subdirectory 'util' (i.e., 'utilities').  Object no longer
      imports everything that was defined in 'support.h', classes now include only what is
      needed.

   -- almost all 'support.h' functions are now defined in scope of 'base' namespace - no
      longer are they scoped in the broader 'oe' namespace.  The combination of grouping
      functionality into individual related utility files and more explicitly including
      them (e.g., #include "openeaagles/base/util/system.h") where needed, results in
      more explicit references to them (e.g., base::msleep).  This makes it more
      obvious as to where they are defined, and ensure they are defined only where needed.

   Number class
     -- replaced constructor to handle defined 64-bit 'Integer64' datatype to standard
        64-bit integer 'int64_t'. 'Integer64' was dropped in favor of using 'int64_t'.

   'lc' functions
     -- removed lcMax and lcMin, use std::fmax and std::fmin from <cmath> instead.
        When C++14 becomes better supported, should use std::max and std::min templates
        from <algorithm> library
     -- renamed the 'lc' prefix on all char-based string functions and replaced with